# MuddleMeThis

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MuddleMeThis.desktop.template  README.md  app.py  convert_presets.py  launch.bat  launch.sh  manifest.json  requirements.txt  settings_manager.py  setup.sh
dev/: EDIT_IMAGE_FIX.md  SHIFT_BUG_FIX.md  chroma.txt  flux.txt  plans.txt  ponysdxl.txt  qwenimage.txt  schnell.txt  sd15.txt  verify_shift_calculation.py  z-image-turbo.txt
dev/DTgRPCconnector/: EXAMPLES.md  GenerationConfiguration.py  README.md  drawthings_client.py  tensor_decoder.py  tensor_encoder.py
dev/DTgRPCconnector/examples/: edit_image.py
dev/ModuLLe/: .gitignore  .modulle.json.example  CONFIGURATION_SETUP.md  LICENSE  README.md  README_NEW_API.md  REFACTORING.md  pyproject.toml  requirements-dev.txt  requirements.txt
dev/ModuLLe/examples/: README.md  article_summarizer.py  basic_usage.py  multi_language.py  multi_provider.py
dev/ModuLLe/modulle/: __init__.py  base.py  config.py  factory.py
dev/ModuLLe/modulle/cli/: __init__.py  config_wizard.py  ollama_inspector.py
dev/ModuLLe/modulle/providers/: __init__.py
dev/ModuLLe/modulle/providers/claude/: __init__.py  client.py  text_processor.py  vision_processor.py
dev/ModuLLe/modulle/providers/gemini/: __init__.py  client.py  text_processor.py  vision_processor.py
dev/ModuLLe/modulle/providers/lm_studio/: __init__.py  client.py  text_processor.py  vision_processor.py
dev/ModuLLe/modulle/providers/ollama/: __init__.py  client.py  text_processor.py  vision_processor.py
dev/ModuLLe/modulle/providers/openai/: __init__.py  client.py  text_processor.py  vision_processor.py
dev/ModuLLe/modulle/utils/: __init__.py  http_client.py  logging_config.py
dev/ModuLLe/tests/: __init__.py  test_import.py
dev/docs/: BridgeMode.md  ModelConversionTools.md  TechnicalQuirks-ThirdPartyDevelopers.md  ThirdPartyIntegration-BridgeMode.md  ThirdPartyIntegration-gRPCServer.md
settings/: expand.txt  extract.txt  refine.txt  stylecopy.txt
settings/presets/: chroma_official.json  flux_official.json  ponysdxl_official.json  qwenimage_official.json  schnell_official.json  sd15_official.json
